scanf açıklama kısmını düzelttim

--- a/bilg_prog_giris.html
+++ b/bilg_prog_giris.html
@@ -375,7 +375,7 @@ Basinc: 900392.187500
 			<div class="panel">
 				<div class="problem_tanimi">	
 					<h3> Problem Tanımı </h3>				
-					<p> Farklı Veri Türleri ve Değer Aralıklarını Ekrana Yazdırma </p>
+					<p> Konsoldan karakter ve tamsayı türünde değerler okuma </p>
 				</div>
 				<div class="code">
 					<h3> C Kodu </h3>
