--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </div>
 
 <div> 
-	<h2> Son Güncellenme Tarihi : 10 Kasım 2016 Saat 13:30 </h2>
+	<h2> Son Güncellenme Tarihi : 28 Aralık 2016 Saat 16:30 </h2>
 </div>
 
 </body>
