--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <div id="govde">
   <div id="dersler">
     <h1> Dersler</h1>
-    <a href="bilg_prog_giris.html"> Bilgisayar Programlamaya Giriş</a>
-    <a href="ileri_excel.html"> İleri Excel Programlama </a>
+		<ul>
+    <li><a href="ileri_excel.html"> İleri Excel Programlama(2017)</a></li>
+    <li><a href="bilg_prog_giris.html"> Bilgisayar Programlamaya Giriş(2016)</a></li>
+		</ul>
   </div>
 </div>
 <div id="bos_satir">
@@ -23,12 +25,12 @@
   <h1> İletişim </h1> 
   <p>
     <strong>Email:</strong>
-      <a href="mailto:atmismahir@gmail.com">atmismahir@gmail.com</a><br>
+      <a href="mailto:atmismahir@gmail.com">mahiratmis@gmail.com</a><br>
     <strong>Tel:</strong> +90 226 815 5360<br>
-    <strong>Ofis:</strong> C Blok, Oda No:5<br>
+    <strong>Ofis:</strong>Oda No:435<br>
     <strong>Adres:</strong><br>
     Yalova Üniversitesi Merkezi Yerleşkesi<br>
-    Endüstri Mühendisliği Bölümü<br>
+    Mühendislik Fakültesi Binası<br>
     Yalova, Türkiye
   </p>  
 </div>
@@ -39,7 +41,7 @@
 </div>
 
 <div> 
-	<h2> Son Güncellenme Tarihi : 28 Aralık 2016 Saat 16:30 </h2>
+	<h2> Son Güncellenme Tarihi : 20 Şubat 2017 Saat 16:30 </h2>
 </div>
 
 </body>
