--- a/ileri_excel.html
+++ b/ileri_excel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>"İleri Bilgisayar Programlama"></title>
+	<title>"END314 İleri Bilgisayar Uygulamaları"></title>
 	<link rel="stylesheet" href="style.css">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
