--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="dersler">
     <h1> Dersler</h1>
 		<ul>
-    <li><a href="ileri_excel.html"> İleri Excel Programlama(2017)</a></li>
+    <li><a href="ileri_excel.html"> END314 İleri Bilgisayar Uygulamaları(2017)</a></li>
     <li><a href="bilg_prog_giris.html"> Bilgisayar Programlamaya Giriş(2016)</a></li>
 		</ul>
   </div>
