--- a/ileri_excel.html
+++ b/ileri_excel.html
@@ -14,9 +14,9 @@
 			<h2> <a href="https://www.fullprogramlarindir.com/office-2013-katilimsiz-indir-pro-vl-turkce-32x64-bit-ocak-2017-zk.html"> Office 2013 Programı (Yasal Değildir Önerilmez)</a></h2>
 			
 			<hr>
-			<h3> Time and Place (Advance Computer Programming)</h3> 
+			<h3> Time and Place (Advance Computer Applications - END358)</h3> 
 			     Tuesday 09:00 - 12:00  S106
-			<h3> Zaman ve Yer (İleri Bilgisayar Programlama)</h3> 
+			<h3> Zaman ve Yer (İleri Bilgisayar Uygulamaları - END314)</h3> 
  			     Salı 13.00 - 16.00  S106 
 			
 			<hr>
