--- a/ileri_excel - Kopya.html
+++ b/ileri_excel - Kopya.html
@@ -11,23 +11,18 @@
 	<div id="govde">
 		<div class="left">
 			<div id="kaynaklar">
-
+			<h2> <a href="https://www.fullprogramlarindir.com/office-2013-katilimsiz-indir-pro-vl-turkce-32x64-bit-ocak-2017-zk.html"> Office 2013 Programı (Yasal Değildir Önerilmez)</a></h2>
+			
+			<hr>
 			<h3> Time and Place (Advance Computer Applications - END358)</h3> 
 			     Tuesday 09:00 - 12:00  S106
 			<h3> Zaman ve Yer (İleri Bilgisayar Uygulamaları - END314)</h3> 
  			     Salı 13.00 - 16.00  S106 
-					 
-			<hr>
-			<h2>Ders Matertalleri, Forum, Devamsızlık Takibi için </h2>
-			<a href="http://193.255.61.241/moodle/" target="_blank"> MOODLE </a>					 
 			
 			<hr>
 			<h2>Yararlanabileceğiniz Kaynaklar</h2>
 			<h3> Web Siteleri Türkçe</h3>
-			  <p>Excel 2007 ile Excel 2010 ve 2013 arasınad çok ufak farklılıklar bulunmaktadır. O sebeple 2013 yada 2010 için var olan kaynaklardan faydalanabilirsiniz.</p>
 				<ul>
-					<li><a href="http://www.excel.web.tr/f60/" target="_blank"> Excel Dershanesi </a></li>
-					<li><a href="https://www.youtube.com/watch?v=i4dHq2q3aOI&list=PLmKlMP0PYMiRjcznrr9VijfWx1RMZPdXg" target="_blank"> Excel 2013'e Giriş </a></li>
 					<li><a href="https://www.youtube.com/watch?v=mLRNUwV2xhw&list=PLWctyKyPphPjLte7LgQZuzmiO0WSzejK8" target="_blank"> Excel 2013 Dersleri </a></li>
 					<li><a href="https://support.office.com/tr-tr/article/Excel-2013-e%C4%9Fitimi-aaae974d-3f47-41d9-895e-97a71c2e8a4a" target="_blank"> Excel 2013 Eğitimi </a></li>	
 				</ul>
@@ -50,15 +45,12 @@
 			
 			
 			<hr>
-			<h3>Ağırlıklar</h3>
-			<table>
-				<tbody>
-						<th> Tür</th><th> Ağırlık &#37;</th>
-						<tr><td>Vize</td><td>25</td></tr>
-						<tr><td>Quizler</td><td>25</td></tr>
-						<tr><td>Final</td><td>50</td></tr>
-				</tbody>
-			</table>	
+			<h3> Sınav Ağırlıkları </h3>
+			<ul>
+			<li>Vize  &#37;25</li>
+			<li>Quizler &#37;25</li>
+			<li>Final &#37;50</li>
+			</ul>
 
 			</div>
 		</div>
@@ -98,7 +90,7 @@
 </div>
 
 	<div id="ayak">
-	<h3> Son Güncellenme Tarihi : 26 Şubat 2017 Saat 16:30 </h3>
+	<h3> Son Güncellenme Tarihi : 20 Şubat 2017 Saat 16:30 </h3>
 	</div>
 
 	<!-- Akordeon Menu -->
