--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1> Dersler</h1>
 		<ul>
     <li><a href="ileri_excel.html"> END314 İleri Bilgisayar Uygulamaları(2017)</a></li>
+    <li><a href="veri_tabani_yonetimi.html"> END208 Veri Tabanı Yönetimi(2017)</a></li>		
     <li><a href="bilg_prog_giris.html"> Bilgisayar Programlamaya Giriş(2016)</a></li>
 		</ul>
   </div>
@@ -25,7 +26,7 @@
   <h1> İletişim </h1> 
   <p>
     <strong>Email:</strong>
-      <a href="mailto:atmismahir@gmail.com">mahiratmis@gmail.com</a><br>
+      <a href="mailto:atmismahir@gmail.com">mahir.atmis@gmail.com</a><br>
     <strong>Tel:</strong> +90 226 815 5360<br>
     <strong>Ofis:</strong>Oda No:435<br>
     <strong>Adres:</strong><br>
