--- a/veri_tabani_yonetimi.html
+++ b/veri_tabani_yonetimi.html
@@ -18,7 +18,7 @@
 			
 			<hr>
 			<h3> Zaman ve Yer</h3> 
- 			     Cuma 09.00 - 11.00  S105 (Teori)
+ 			     Cuma 09.00 - 11.00  S105 (Teori) - İlk 2 hafta 10.00- 12.00 arası yapılacak
 					 Cuma 11.00 - 13.00  S105 (Lab)					 			
 			<hr>
 			<h2>Yararlanabileceğiniz Kaynaklar</h2>
