--- a/index.html
+++ b/index.html
@@ -1,49 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title> Mahir Atmış</title>
-<link rel="stylesheet" href="style.css">
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta charset="utf-8">
+  <title></title>
+  <link href="style.css" rel="stylesheet" />
 </head>
-<body style="color:#1abc9c;">
-<div id="bas">
-</div>
-<div id="govde">
-  <div id="dersler">
-    <h1> Dersler</h1>
-		<ul>
-    <li><a href="ileri_excel.html"> END314 İleri Bilgisayar Uygulamaları(2017)</a></li>
-    <li><a href="veri_tabani_yonetimi.html"> END208 Veri Tabanı Yönetimi(2017)</a></li>		
-    <li><a href="bilg_prog_giris.html"> Bilgisayar Programlamaya Giriş(2016)</a></li>
-		</ul>
+<body>
+
+<div class="images-slideshow">
+    <div class="imageSlides fade">
+        <img src="images/01.png" width="800" height="600">
+    </div>
+    <div class="imageSlides fade">
+        <img src="images/02.png">
+    </div>
+    <div class="imageSlides fade">
+        <img src="images/03.png">
+    </div>
+    <div class="imageSlides fade">
+      <img src="images/04.png">
+    </div>
+    <div class="imageSlides fade">
+      <img src="images/05.png">
   </div>
-</div>
-<div id="bos_satir">
-<p></p>
-</div>
-
-<div id="ayak">
-  <h1> İletişim </h1> 
-  <p>
-    <strong>Email:</strong>
-      <a href="mailto:atmismahir@gmail.com">mahir.atmis@gmail.com</a><br>
-    <strong>Tel:</strong> +90 226 815 5360<br>
-    <strong>Ofis:</strong>Oda No:435<br>
-    <strong>Adres:</strong><br>
-    Yalova Üniversitesi Merkezi Yerleşkesi<br>
-    Mühendislik Fakültesi Binası<br>
-    Yalova, Türkiye
-  </p>  
+  <div class="imageSlides fade">
+    <img src="images/06.png">
+  </div>
+    <a class="slider-btn previous" onclick="setSlides(-1)">❮</a>
+    <a class="slider-btn next" onclick="setSlides(1)">❯</a>
 </div>
 
-<div> 
-	<h1> Ofis Saatleri </h1>
-	<img src="ofis_saatleri.png" alt="Ofis Saatleri" />
-</div>
-
-<div> 
-	<h2> Son Güncellenme Tarihi : 26 Şubat 2017 Saat 16:30 </h2>
-</div>
+<script src="project.js">
+</script>
 
 </body>
 </html>
