--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 
 <div class="images-slideshow">
     <div class="imageSlides fade">
-        <img src="images/01.png" width="800" height="600">
+        <img src="01.png" width="800" height="600">
     </div>
     <div class="imageSlides fade">
-        <img src="images/02.png">
+        <img src="02.png">
     </div>
     <div class="imageSlides fade">
-        <img src="images/03.png">
+        <img src="03.png">
     </div>
     <div class="imageSlides fade">
-      <img src="images/04.png">
+      <img src="04.png">
     </div>
     <div class="imageSlides fade">
-      <img src="images/05.png">
+      <img src="05.png">
   </div>
   <div class="imageSlides fade">
-    <img src="images/06.png">
+    <img src="06.png">
   </div>
     <a class="slider-btn previous" onclick="setSlides(-1)">❮</a>
     <a class="slider-btn next" onclick="setSlides(1)">❯</a>
