--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
   <div class="imageSlides fade">
     <img src="06.png">
   </div>
+  <div class="imageSlides fade">
+    <img src="07.png">
+  </div>
+  <div class="imageSlides fade">
+    <img src="08.png">
+  </div>  
+  <div class="imageSlides fade">
+    <img src="09.png">
+  </div>
+
+  
     <a class="slider-btn previous" onclick="setSlides(-1)">❮</a>
     <a class="slider-btn next" onclick="setSlides(1)">❯</a>
 </div>
